crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_list_verbose__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
[
  {
    "id": "550e8400-e29b-41d4-a716-446655440000",
    "type": "decision",
    "epistemic": "decision",
    "summary": "Test index entry",
    "criticality": 0.8,
    "status": "Active",
    "visibility": "Shared",
    "created_at": "2026-01-02T03:04:05Z",
    "updated_at": "2026-01-02T03:04:05Z"
  },
  {
    "id": "018f2a1b-3c4d-7e5f-8a9b-0c1d2e3f4a5b",
    "type": "hazard",
    "epistemic": "observation",
    "summary": "Blocking calls deadlock the daemon",
    "tags": [
      "async"
    ],
    "criticality": 0.95,
    "status": "Active",
    "visibility": "Shared",
    "created_at": "2026-01-02T03:04:05Z",
    "updated_at": "2026-01-02T03:04:05Z",
    "invalidated_at": "2020-06-15T12:00:00Z"
  }
]
--- stderr ---
